[gd_scene load_steps=10 format=3 uid="uid://fknjj3o3440u"]

[ext_resource type="Texture2D" uid="uid://dkpr7leyt8gqy" path="res://assets/sprites/slime_green.png" id="1_eki4a"]
[ext_resource type="Script" path="res://scenes/slime.gd" id="1_ffphj"]
[ext_resource type="PackedScene" uid="uid://cdesnsetlbay1" path="res://scenes/killzone.tscn" id="2_n5lj1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rhvp2"]
atlas = ExtResource("1_eki4a")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_100jw"]
atlas = ExtResource("1_eki4a")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6hug"]
atlas = ExtResource("1_eki4a")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv2rr"]
atlas = ExtResource("1_eki4a")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ylh2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhvp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_100jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6hug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv2rr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex8lj"]
size = Vector2(8, 11)

[node name="slime green" type="Node2D"]
script = ExtResource("1_ffphj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ylh2r")
autoplay = "default"

[node name="Killzone" parent="." instance=ExtResource("2_n5lj1")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_ex8lj")

[node name="RayCast DownLeft" type="RayCast2D" parent="."]
position = Vector2(-8, -1)
target_position = Vector2(0, 7)

[node name="RayCast DownRight" type="RayCast2D" parent="."]
position = Vector2(8, -1)
target_position = Vector2(0, 7)

[node name="RayCast Left" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-7, 0)

[node name="RayCast Right" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(7, 0)
